tests/baselines/reference/classWithPrivateProperty.errors.txt
==== tests/cases/conformance/types/members/classWithPrivateProperty.ts (8 errors) ====
    // accessing any private outside the class is an error
    
    class C {
        private x;
        private a = '';
        private b: string = '';
        private c() { return '' }
        private d = () => '';
        private static e;
        private static f() { return '' }
        private static g = () => '';
    }
    
    var c = new C();
    var r1: string = c.x;
                     ~~~
!!! error TS2341: Property 'C.x' is inaccessible.
    var r2: string = c.a;
                     ~~~
!!! error TS2341: Property 'C.a' is inaccessible.
    var r3: string = c.b;
                     ~~~
!!! error TS2341: Property 'C.b' is inaccessible.
    var r4: string = c.c();
                     ~~~
!!! error TS2341: Property 'C.c' is inaccessible.
    var r5: string = c.d();
                     ~~~
!!! error TS2341: Property 'C.d' is inaccessible.
    var r6: string = C.e;
                     ~~~
!!! error TS2341: Property 'C.e' is inaccessible.
    var r7: string = C.f();
                     ~~~
!!! error TS2341: Property 'C.f' is inaccessible.
    var r8: string = C.g();
                     ~~~
!!! error TS2341: Property 'C.g' is inaccessible.